--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,9 +24,10 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+anyhow = "1.0"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
 tracing-appender = "0.2"
 chrono = "0.4"
 csv = "1"
